--- a/gb/21/8/27/n13192123.md
+++ b/gb/21/8/27/n13192123.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qtfwow338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>医生建议堕胎 信仰让她坚持生下唐氏症女孩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192166-ET-Courtney-Baker-faith-700x420-600x400.jpg" />
 <h6>左图为贝克夫妇(Courtney Baker提供); 右图为夫妇俩患有唐氏综合症的女儿艾默生。（Scott David Photography摄影，考特尼?贝克提供）
 </h6>
 <hr>
-	<p>【大纪元2021年08月27日讯】（英文大纪元Inspired Staff报导／谢漫雪编译）当一位<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%A6%88%E5%A6%88.md#1">妈妈</a>怀上患有唐氏综合症的婴儿时，她的<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%8C%BB%E7%94%9F.md#1">医生</a><ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%BB%BA%E8%AE%AE.md#1">建议</a>她终止妊娠。然而，由于对信仰的坚定，她和她的丈夫决定继续怀孕。现在，他们6岁的女儿在学校表现出色，在沟通方面一天比一天好。</p>
+	<p>【大纪元2021年08月27日讯】（英文大纪元Inspired Staff报导／谢漫雪编译）当一位<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A6%88%E5%A6%88.md#1">妈妈</a>怀上患有唐氏综合症的婴儿时，她的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%BB%E7%94%9F.md#1">医生</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BB%BA%E8%AE%AE.md#1">建议</a>她终止妊娠。然而，由于对信仰的坚定，她和她的丈夫决定继续怀孕。现在，他们6岁的女儿在学校表现出色，在沟通方面一天比一天好。</p>
 <p>49岁的考特尼?贝克（Courtney Baker）是佛罗里达州中部三个孩子的母亲，在她怀上艾默生（Emersyn）时，产前检查证实贝克和她的丈夫马特（Matt）很有可能会生出患有唐氏综合症的孩子。</p>
 <p>“我们震惊了。我们受到沉重打击，但这只是因为我们对唐氏综合症的事情一无所知”，贝克在电子邮件采访中告诉《大纪元时报》，“我们只知道最坏的情况是当我们离开产检办公室时，我们没有得到任何帮助。我们俩觉得完全迷失了。”</p>
-<figure id="attachment_13192179" aria-describedby="caption-attachment-13192179" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13192179-ET-Courney-Baker-Emersyn-11.jpg"><img class=" wp-image-13192179" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192179-ET-Courney-Baker-Emersyn-11-450x411.jpg" alt="" width="601" b="549" /></a><figcaption id="caption-attachment-13192179" class="wp-caption-text">艾默生（Emersyn）和<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%A6%88%E5%A6%88.md#1">妈妈</a>考特尼。（考特尼?贝克提供）</figcaption></figure>
-<p>针对怀孕的问题，产科<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%8C%BB%E7%94%9F.md#1">医生</a>给这对夫妇提供了一些“选择”，甚至为他们预约了一个会与他们讨论他们的决定的人。</p>
+<figure id="attachment_13192179" aria-describedby="caption-attachment-13192179" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13192179-ET-Courney-Baker-Emersyn-11.jpg"><img class=" wp-image-13192179" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192179-ET-Courney-Baker-Emersyn-11-450x411.jpg" alt="" width="601" b="549" /></a><figcaption id="caption-attachment-13192179" class="wp-caption-text">艾默生（Emersyn）和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A6%88%E5%A6%88.md#1">妈妈</a>考特尼。（考特尼?贝克提供）</figcaption></figure>
+<p>针对怀孕的问题，产科<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%BB%E7%94%9F.md#1">医生</a>给这对夫妇提供了一些“选择”，甚至为他们预约了一个会与他们讨论他们的决定的人。</p>
 <p>“我告诉他不需要讨论。她是我们的孩子，我们要她。他似乎很惊讶，但还是为我们安排了预约。”贝克说。</p>
-<p>六周后，这对夫妇拜访了一位专科医生，以检查他们女儿的发育进展。医生坚持他们应该考虑<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%A0%95%E8%83%8E.md#1">堕胎</a>，并给了他们十几个理由来陈述他的论断。</p>
+<p>六周后，这对夫妇拜访了一位专科医生，以检查他们女儿的发育进展。医生坚持他们应该考虑<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A0%95%E8%83%8E.md#1">堕胎</a>，并给了他们十几个理由来陈述他的论断。</p>
 <p>“那时，我们已经给她起了名字。我告诉他（医生）她的名字是艾默生，我们要留着她。他再次质疑我们，在后来的产检中他几乎变得像个恶霸。”贝克告诉《大纪元时报》。</p>
 <figure id="attachment_13192185" aria-describedby="caption-attachment-13192185" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13192185-ET-Courney-Baker-Emersyn-5.jpg"><img class=" wp-image-13192185" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192185-ET-Courney-Baker-Emersyn-5-450x421.jpg" alt="" width="601" b="562" /></a><figcaption id="caption-attachment-13192185" class="wp-caption-text">马特和考特尼夫妇。 （考特尼?贝克提供）</figcaption></figure>
 <p>这对夫妇表示，这位医生似乎很喜欢看到他们的孩子有问题。“我们最后一次检查时，他告诉我们她的脚是畸形的，他咯咯地笑了起来。马特和我离开了办公室，我们知道不会再回去了。”她说。</p>
 <p>贝克和丈夫信仰坚定，不顾外界压力，继续怀孕，于2014年2月生下了婴儿艾默生。</p>
-<p>回顾他们所做的选择，贝克说，“信仰绝对在保住艾美（Emmy，Emersyn的昵称）上发挥了作用。”她说，“我从高中开始就知道<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%A0%95%E8%83%8E.md#1">堕胎</a>的恐怖，我看过一部关于堕胎的纪录片，他们解体了婴儿。我永远不会忘记那个画面。”</p>
+<p>回顾他们所做的选择，贝克说，“信仰绝对在保住艾美（Emmy，Emersyn的昵称）上发挥了作用。”她说，“我从高中开始就知道<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A0%95%E8%83%8E.md#1">堕胎</a>的恐怖，我看过一部关于堕胎的纪录片，他们解体了婴儿。我永远不会忘记那个画面。”</p>
 <p>结婚初期，夫妇俩就讨论过如果有残疾的孩子，应该如何处理这样的生活。他们的长女瑞恩（Rhyan）现年19岁，天生耳聋，并在很小的时候就接受了人工耳蜗植入。通过那次经历，这对夫妇看到他们的旅途并不孤单。贝克说：“上帝不仅与我们一起经历了那次试验，而且还利用瑞恩的耳聋来帮助其他人。”</p>
 <p>贝克坚信，瑞恩的经历给予了自己力量，并相信上帝也会在艾默生的旅程中帮助他们。</p>
 <p>艾默生出生15个月后，贝克看到一位朋友在Facebook的帖子，产前专家在看了他们患有唐氏综合症儿子的声像图后说“他是完美的”。这使贝克给她的医生写了一封信。</p>
@@ -33,7 +33,7 @@
 <p>这个小女孩与她的两个姐姐感情深厚，也与社区的人们有着密切的联系。贝克坚信，在无数支持她的人的帮助下，她的艾默生将改变世界。</p>
 <figure id="attachment_13192201" aria-describedby="caption-attachment-13192201" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13192201-ET-Courney-Baker-Emersyn-4.jpg"><img class=" wp-image-13192201" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192201-ET-Courney-Baker-Emersyn-4-450x352.jpg" alt="" width="600" b="469" /></a><figcaption id="caption-attachment-13192201" class="wp-caption-text">艾默生和她的两个姐姐。（考特尼?贝克提供）</figcaption></figure>
 <p>贝克根据自己的经验，告诉怀有唐氏综合症孩子的父母，即使在这个阶段可能会让他们感到绝望或无助，但当他们见到孩子时，这些情绪就会消失。</p>
-<p>“我告诉怀孕的妈妈们要享受怀孕的过程，这可能很艰辛”，贝克说，“我对抚养唐氏综合症孩子的父母的<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%BB%BA%E8%AE%AE.md#1">建议</a>是继续和支持的团体在一起。作为有唐氏综合症孩子的父母，我们能彼此理解。”</p>
+<p>“我告诉怀孕的妈妈们要享受怀孕的过程，这可能很艰辛”，贝克说，“我对抚养唐氏综合症孩子的父母的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BB%BA%E8%AE%AE.md#1">建议</a>是继续和支持的团体在一起。作为有唐氏综合症孩子的父母，我们能彼此理解。”</p>
 <figure id="attachment_13192224" aria-describedby="caption-attachment-13192224" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13192224-ET-Courtney-Baker-Scott-3.jpg"><img class=" wp-image-13192224" src="https://i.epochtimes.com/assets/uploads/2021/08/id13192224-ET-Courtney-Baker-Scott-3-450x320.jpg" alt="" width="599" b="426" /></a><figcaption id="caption-attachment-13192224" class="wp-caption-text">贝克夫妇和他们的三个孩子。（Scott David Photography摄影，考特尼?贝克提供）</figcaption></figure>
 <p>贝克还敦促每个有唐氏综合症孩子的妈妈分享自己的故事，希望它可以激励人们并更好地给以诠释。</p>
 <p>“我想到一点，就是在社会上我们不必如此努力地证明唐氏综合症患者就是那样的人。他们有思想、情感、喜欢、不喜欢以及可能受到伤害的珍贵的心，就像其他人一样。”贝克说。</p>
@@ -45,35 +45,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/12/25/n12644521.md#1">唐氏症女孩特奥会四次夺冠 如今还是模特</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/1/27/n12714688.md#1">西班牙唐氏症女孩 如愿登上纽约时装周T台</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/1/30/n12722693.md#1">被告知无生存能力 唐氏症女孩克服障碍鼓励他人</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/7/6/n13071654.md#1">十岁唐氏症女孩成模特：世界需更多善与关爱</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/12/25/n12644521.md#1">唐氏症女孩特奥会四次夺冠 如今还是模特</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/1/27/n12714688.md#1">西班牙唐氏症女孩 如愿登上纽约时装周T台</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/1/30/n12722693.md#1">被告知无生存能力 唐氏症女孩克服障碍鼓励他人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/6/n13071654.md#1">十岁唐氏症女孩成模特：世界需更多善与关爱</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9947938.md#1" target="_blank">张易：批马篇（二）共产主义是贫穷的根源</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10203021.md#1" target="_blank">泣血而书——民国与文革中知识份子的命运</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/28/n11983353.md#1">台夫妻逾期未缴居家检疫罚款30万 两人已出境</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11984729.md#1">从中国进口130万缺陷口罩 荷兰停用并召回</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11986130.md#1">台湾再增一名中共肺炎死亡患者 年仅40余岁</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/28/n11983549.md#1">新闻出现“封台倒数6天” 中天更正致歉</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/28/n11984334.md#1">中国真的零确诊？“黄安躲在台湾”打脸中共</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/30/n11987402.md#1">刘真今火化胞弟送最后一程 辛龙未现身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11985885.md#1">灵堂开放最后一天 辛龙难舍爱妻一度掩面痛哭</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/27/n11981967.md#1">跑完通告高烧38度 香港女星忧染疫入院筛检</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11984757.md#1">台魔术师曝隔离出关日 被陈时中“暖举”感动</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/26/n11978058.md#1">中共朝令夕改成常态 疫情下影院再度停业</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/17/n11948074.md#1">古人濒死体验：元神离体游历天国 预知时局</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/25/n11974495.md#1">面对魔鬼诱惑时 您会如何选择？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/27/n13192123.htm">医生建议堕胎 信仰让她坚持生下唐氏症女孩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/27/n13192123.htm">医生建议堕胎 信仰让她坚持生下唐氏症女孩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qtfwow338/djy/blob/master/gb/21/8/27/n13192123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/8/27/n13192123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
